Added some Chapter titles

--- a/thesis.tex
+++ b/thesis.tex
@@ -530,6 +530,12 @@
 
         \scaffold{The following theorem is a diagrammatic version of the above.}
 
+        \chapter{Categorical Approach to Jacobi Diagrams}
+
+        \chapter{Virtual (Welded?) Tangles and Arrow Diagrams}
+
+        \chapter{Categorical Approach to Arrow Diagrams}
+
         \chapter{Welded Knots, Foams and the Kashiwara-Vergne Equations}
 
         \chapter{Existing Topological Interpretations of the Kashiwara-Vergne Equations}
