--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,17 @@
+@article{integration-of-singular-braid-invariants,
+	ISSN = {00029947},
+	URL = {http://www.jstor.org/stable/117639},
+	author = {Michael Hutchings},
+	journal = {Transactions of the American Mathematical Society},
+	number = {5},
+	pages = {1791--1809},
+	publisher = {American Mathematical Society},
+	title = {Integration of Singular Braid Invariants and Graph Cohomology},
+	urldate = {2025-05-26},
+	volume = {350},
+	year = {1998},
+}
+
 @book{knots-links-and-their-invariants,
 	title = {Knots, Links and Their Invariants: An Elementary Course in
 	         Contemporary Knot Theory},
