--- a/thesis.tex
+++ b/thesis.tex
@@ -255,309 +255,23 @@
 
         \tableofcontents
 
-        \chapter*{Acknowledgements}
-        \addcontentsline{toc}{chapter}{Acknowledgements}
+        \include{introduction}
 
-        These are the acknowledgements.
+        \include{vassiliev_invariants_and_chord_diagrams}
 
-        \chapter*{Introduction}
-        \addcontentsline{toc}{chapter}{Introduction}
+        \include{lie_algebras_and_jacobi_diagrams}
 
-        \section*{The idea of finite type invariants}
-        \draftnote{Here I want to motivate the study of finite type invariants in general, using analogies from discriminant theory.}
+        \include{chord_diagrams_as_a_universal_enveloping_algebra}
 
-        The essence of singularity theory, developed by Arnold, Thom, Vassiliev, etc. is that various geometric or topological objects can be studied by considering not only those objects, but also their singular versions, and using this `discriminant set' to define and compute invariants. Take for example the following simple analogy, from \cite{knots-links-and-their-invariants}.
+        \include{welded_knots_and_arrow_diagrams}
 
-        In this analogy, instead of studying some topological object (say, the space of knots), we study a much simpler geometric one: the space of quadratic equations without multiple roots. For now, let us have real coefficients and real roots.
+        \include{arrow_diagrams_as_a_universal_enveloping_algebra}
 
-        \begin{example}[Quadratic equations with real roots]
-                All quadratic equations can be put in the form \(x^{2} + px + q = 0\), and then represented as a point in the \((p, q)\) coordinate plane. By completing the square, those quadratic equations with one root which we ignored live on the parabola \(P\) given by \(q = p^{2}/4\).
+        \include{expansions_and_associators}
 
-                The number of roots of each point \((p, q)\) can then be calculated as follows. First, choose a starting point, say \((1, 0)\) which represents \(x^{2} + x = 0\), having two roots. Choose also a curve \(C\) in general position with respect to \(P\), from \((1, 0)\) to \((p, q)\). Put an orientation on the curve traced out by the parabola \(P\), such as below. Then, starting at \((1, 0)\) and traversing along the curve, note that every time the \(C\) intersects \(P\) `negatively', the number of roots decreases by two, and a `positive` intersection increases the number of roots by two.
+        \include{emergent_knotting}
 
-                \begin{figure}[H]
-                        \centering
-                        \includegraphics[width=0.4\textwidth]{graphics/parabola_example.jpg}
-                \end{figure}
-
-                The function \(R(p, q)\) that sends a quadratic equation to its number of roots is an invariant of the nice `space' of all quadratic equations with the singular locus \(P\) removed. But the moral of the story is that certain nice invariants of the `nice' space can be constructed by considering the `ugly' space that includes some `discriminant set' (in this case \(P\)), by setting the invariant, say \(f\) to take some value on \(P\), and enforcing that the value of the invariant changes by \(\pm f(P)\) on any path crossing through \(P\), depending on orientation. One could write this rule as
-
-        \begin{figure}[H]
-                \centering
-                \includegraphics[width=0.3\textwidth]{graphics/simple_singularity_relation.jpg}
-        \end{figure}
-        \end{example}
-
-
-
-        \section*{Vassiliev invariants}
-
-        Let's translate this idea into knot theory, following the work of Vassiliev in \cite{cohomology-of-knot-spaces, complements-of-discriminants-of-smooth-maps-topology-and-applications}. The generic objects of study in knot theory are smooth embeddings \(S^{1} \hookrightarrow \R^{3}\). A \textit{knot} can either mean an equivalence class of such embeddings up to ambient isotopy, or a specific embedding, depending on the context.
-
-        The space of knots, that is the configuration space of all smooth embeddings, lies within the space of all smooth maps \(S^{1} \to \R^{3}\) (which we denote \(K\)). And the discriminant space \(\Sigma\) is the space of all maps with singularities or self-intersections. The discriminant space is `stratified' into the components by subspaces of smooth maps with multiple self-intersections; the space with \(i\) such singularities we call \(\Sigma_{i}\).
-
-        Then, each knot corresponds to a component of \(K \smallsetminus \Sigma\), and numerical invariants of knots correspond to elements of \(H^{0}(K \smallsetminus \Sigma)\).
-        \draftnote{
-                My intention here is to convince the reader that finite type invariants and chord diagrams are important by fleshing out the above analogy. I want to expand the above paragraph to include:
-                \begin{itemize}
-                        \item If \(H^{0}(K \smallsetminus \Sigma)\) are all knot invariants, in terms of cohomology, what are the finite type invariants?
-                        \item Are the above defined in terms of invariants (functions) \(H^{0}(K \smallsetminus \Sigma_{i})\) (defined on higher levels of the stratification)?
-                        \item What are the interpretations of \(H^{i}(K \smallsetminus \Sigma)\) \cite[p.149]{complements-of-discriminants-of-smooth-maps-topology-and-applications}?
-                        \item According to Sossinsky in \cite[p. 49]{knots-mathematics-with-a-twist} Vassiliev's work (presumably in \cite{complements-of-discriminants-of-smooth-maps-topology-and-applications, cohomology-of-knot-spaces}) says that different paths through \(K\), amounting to different calculations of a finite type invariant, give the same result. What, precisely, is this statement in terms of homology/cohomology?
-                        \item Maybe but also maybe not yet: How do chord diagrams come into this? (I think they determine how the higher levels of the stratification can take on different values under finite type invariants).
-                \end{itemize}
-
-                Something like:
-        }
-
-        The work of Vassiliev is to understand the space
-        \(K \smallsetminus \Sigma\).
-        Paths through this space correspond to isotopy on knots, so each component corresponds to a different knot. The locally constant functions on this space, that is the zeroth cohomology group,
-        \({H^{0}(K \smallsetminus \Sigma, \mathcal{R})}\)
-        is exactly the group of knot invariants valued in
-        \(\mathcal{R}\).
-
-        % TODO: Get someone who has any idea about spectral sequences to read this and see if it makes sense
-        In fact, Vassiliev looks at the more general question of computing the cohomology ring
-        \({H^{\ast}(K \smallsetminus \Sigma, \mathcal{R}})\).
-        The Vassiliev invariants (of order \(i\)) are a certain subgroup of
-        \({H^{0}(K \smallsetminus \Sigma)}\)
-        that (roughly) can be written as linking numbers with cycles in the homology group of the strata at depth \(i\) of the discriminant, cycles in
-        \({H_{n - 1}(\Sigma_{i}, \mathcal{R})}\).
-
-        As summarised in \cite{introduction-to-vassiliev-invariants}, Vassiliev constructs and uses tools in the arsenal of singularity theory to compute terms of the cohomological spectral sequence \(E^{p, q}_{r}\), and while it is unclear whether this contains all of the cohomological information about \({K \smallsetminus \Sigma}\), its zero-dimensional cohomology classes are exactly the Vassiliev invariants.
-
-        In a more down-to-earth way of putting it, Vassiliev invariants are those which differ by predictable amounts on different sides of the strata, that is obeying the relation
-        \begin{figure}[H]
-                \centering
-                \includegraphics[width=0.3\textwidth]{graphics/vassiliev_relation.png}
-        \end{figure}
-        \noindent
-        in which after some depth in the strata, the left hand side of the above is always zero, meaning that \(f\) is unchanged by that part of the strata.
-
-        Invariants of Vassiliev's type are determined (up to lower order Vassiliev invariants) by \textit{weight systems} or equivalently, by their values on the the dual space of \textit{chord diagrams}. In Chapter \ref{ch:formality-and-chord-diagrams} we will approach Vassiliev invariants from this angle: by focussing instead on the algebra of chord diagrams, the associated graded space of knots. We discuss an algebraic construction of the Universal Vassiliev Invariant due to Drinfeld which makes the link to quantum algebra.
-
-        In Chapter \ref{ch:lie-theory-and-jacobi-diagrams}, we find an isomorphism between the algebra of chord diagrams and the algebra of Jacobi diagrams. It becomes clear that Lie theory is the proper way to view this algebra and others like it.
-
-        \scaffold{In chapter \(X\) we will talk about \(Y\).}
-
-        \section*{Notation and Nomenclature}
-
-        % TODO: Insert example skein relation.
-
-        Note that in `skein' relations/diagrams such as above, knots are variables that only differ in the regions that are drawn, and are identical in the regions omitted. We will begin to omit the dotted lines indicating these regions.
-
-        The term `knot` will be used both for specific embeddings of a knot, as well as an equivalence class under ambient isotopy: context should make it clear.
-
-        \chapter{Vassiliev Invariants and Chord Diagrams}
-        \label{ch:formality-and-chord-diagrams}
-
-        \scaffold{Filtered structures, associated graded structures, formality and how this leads to conections between Vassiliev Invariants and quantum algebra via a general application of Von Dyck's Theorem. Can include intro to PaT Vassiliev filatration, chord diagrams, Drinfeld Associators on a story sort of level.}
-
-
-        \scaffold{In more detail. A section will be on chord diagrams and the associated graded. Since the introduction comes from the Vassiliev history space-of-knots point-of-view, I want to do things pretty formally with respect to the associated graded space. i.e. I don't want to say double point = overcrossing - undercrossing, as these two things are definitely not equal, but it is okay to say V(d.p.) = V(over) - V(under). To do this requires the treatment in \cite{the-fundamental-theorem-of-vassiliev-invariants}, which on the bright side means I get to talk about the polynomials analogy. It means that the statement becomes \[\text{weight systems} = \operatorname{gr}(\text{Vassiliev invariants})\] instead of directly \[\text{chord diagrams} = \operatorname{gr}(\text{singular knots})\] (or at least that's how it's put in \cite{the-fundamental-theorem-of-vassiliev-invariants}, but perhaps this can also be turned into a statement without all the implicit duals.}
-
-        In \cite{on-the-vassiliev-knot-invariants} Bar-Natan makes the following analogy between knot theory and calculus: two knots that differ only by a single crossing such as
-        \[(1)\]
-        are `close' to each other in the sense of being close in the space of smooth maps \(S^{1} \to \R^{3}\) from the introduction. This space includes the \(m\)-singular knots:
-        \begin{definition}[\(n\)-singular knot]
-                An \(m\)-singular knot is a singular knot (smooth map \(S^{1} \to \R^{3}\)) whose only singularities are exactly \(m\) transverse double points.
-        \end{definition}
-
-        Indeed any knot invariant \(V\) can be extended to a function \(V^{m}\) of \(m\)-singular knots \(m\) transverse double points by the formula
-        \[V^{(0)} = V\]
-        \[V^{(m + 1)}\left(\singular\right) = V^{(m)}\left(\poscross\right) - V^{(m)}\left(\negcross\right)\]
-        The analogy stems from treating this evaluation of an invariant on two very close knots as derivative.
-
-        Just as polynomials are the functions that vanish after a certain number of derivatives, we define:
-
-        \begin{definition}[Vassiliev Invariant] \label{def:vassiliev_invairant}
-                \begin{enumerate}[(a)]
-                        \item A knot invariant is a \textit{Vassiliev invariant} of order (or type) \(m\) if
-                        \[V^{(m + 1)}\biggl( \underbrace{\singular \cdots \singular}_{{\scriptscriptstyle m + 1}} \biggr) = 0.\]
-
-                        The \textit{order} of a Vassiliev invariant \(V\) is the highest \(m\) such that \(V\) is a Vassiliev invariant of order \(m\). Equivalently, it's the highest number of double points a knot \(K\) can have without \(V(K)\) having to vanish.
-
-                        \item The set of Vassiliev invariants of order \(m\) is a vector space, and we denote it \(\mathcal{V}_{m}\).
-        \end{enumerate}
-        \end{definition}
-
-        If this analogy is worth its salt, then there should be some artefact of the calculus fact that \(f^{(m + 1)} \equiv 0\) implies \(f^{(m)}\) is a constant. This is not exactly true for Vassiliev invariants, but it is essentially true in the following sense. If
-        \(V^{(m + 1)} \equiv 0\)
-        then \(V^{(m)}\)
-        is a collection of constants, one for each `kind' of \(m\)-singular knot that the variable
-        \[\underbrace{\singular \cdots \singular}_{{\scriptscriptstyle m}}\]
-        could represent. Exactly what describes a `kind' of \(m\)-singular knot will turn out to be a chord diagram, but note: other than this kind, the \(m\)th derivative of an \(m\)-singular knot does not depend on the \(m\)-singular knot, and in that sense it is a constant.
-
-        Many well known invariants have been shown to either be Vassiliev invariants themselves, or be approximatable to arbitrary degree by a series of Vassiliev invariants. The following conjecture is the analogue of the Stone-Weierstrass theorem:
-        \begin{conjecture}
-                Every knot invariant can be approximated arbitrarily well by a series of Vassiliev invariants.
-        \end{conjecture}
-        \draftnote{Is this equivalent to Vassiliev invariants separate knots?}
-
-        \section{Vassiliev Invariants and Chord Diagrams}
-
-        Let us put on solid ground this notion of differentiation.
-
-        \begin{definition}
-                Let \[\mathcal{K}^{0}_{m} = \quotient{\operatorname{span}(\{m\text{-singular knots}\})}{\eqref{eq:diff_relation}}\]
-                where \eqref{eq:diff_relation} is the following relation:
-
-                \begin{equation} \label{eq:diff_relation} \tag{diff}
-                        \singular \ \poscross - \singular \ \negcross = \poscross \ \singular - \negcross \ \singular
-                \end{equation}
-        \end{definition}
-
-        With this definition, it doesn't matter whether an invariant is evaluated on a singular knot or its \(\delta\) image.
-
-        The relation \eqref{eq:diff_relation} asserts that `differentiating' a knot is well-defined and independent of the crossing chosen, allowing the following definition.
-
-        \begin{definition}
-                Let \(\delta: \mathcal{K}^{0}_{m + 1} \to \mathcal{K}^{0}_{m}\) be the maps defined by
-                \[\singular \longmapsto \poscross \ - \ \negcross.\]
-        \end{definition}
-
-
-        An important property of any \(m\)-singular knot is the cyclic order in which the double points are visited.
-
-        \begin{definition} \label{def:chord_diagram}
-                \begin{enumerate}[(a)]
-                        \item A \textbf{chord diagram} of order \(m\) is an oriented circle with a distinguished set of \(m\) pairs of points, considered up to orientation-preserving diffeomorphism of the circle.
-                        \item The \textbf{chord diagram of an \(n\)-singular knot}, denoted \(\sigma(K)\), is the chord diagram of order \(n\) obtained by taking the circle to be the circle in the definition of an \(n\)-singular knot as an immersion of \(S^{1}\), and the \(m\) pairs of points to be the preimages of the double points.
-                        \item The \textbf{space of chord diagrams}, denoted \(\mathbf{A}_{m}\) is the linear span of all chord diagrams of order \(m\).
-                \end{enumerate}
-        \end{definition}
-
-        \begin{example}
-                \[\sigma \biggl( \includegraphics[width=0.14\textwidth, valign=c]{graphics/knot_9_33_singular.pdf} \biggr) =
-                \includegraphics[width=0.13\textwidth, valign=c]{graphics/chord_diagram_of_knot_9_33_singular.pdf}\]
-        \end{example}
-
-        Let's make an important geometric observation about the space of \(m\)-singular knots.
-
-        \begin{lemma} \label{lem:chord_diagram_crossing_change}
-                The following are equivalent
-                \begin{enumerate}[(a)]
-                        \item Two \(m\)-singular knots \(K_{1}\) and \(K_{2}\) have the same chord diagram.
-                        \item There is a sequence of \(m\)-singular knots \(K_{1}, K', K'', \cdots, K_{2}\) where consecutive knots differ by a crossing change.
-                \end{enumerate}
-        \end{lemma}
-
-        \begin{proof}
-                % TODO: Prove me.
-        \end{proof}
-
-        Chord diagrams as defined in definition \ref{def:chord_diagram} are geometric objects, but by the proposition below, the definition could just as well be \(m\)-singular knots modulo the images of \((m + 1)\)-singular knots.
-
-        \begin{proposition} \label{prop:chord_diagrams_isom_singular_quotient_as_vs}
-                There is a vector space isomorphism
-                \[\mathcal{K}^{0}_{m} / \delta\mathcal{K}^{0}_{m + 1} \cong \mathbf{A}_{m}\]
-                given by sending a class \([K] \in \mathcal{K}^{0}_{m} / \delta\mathcal{K}^{0}_{m + 1}\) to its chord diagram \(\sigma(K)\).
-        \end{proposition}
-
-        \begin{remark}
-                Proposition \ref{prop:chord_diagrams_isom_singular_quotient_as_vs} should really be thought of as an alternative definition of a chord diagram, than a proposition, so we may even write \(\mathcal{K}^{0}_{m} / \delta\mathcal{K}^{0}_{m + 1} = \mathbf{A}_{m}\).
-        \end{remark}
-
-        \begin{proof}
-                By lemma \ref{lem:chord_diagram_crossing_change}, if \(m\)-singular knots have the same chord diagram, they must be related by crossing changes. However, the difference between two \(m\) singular knots that are related by a crossing change is in \(\delta\mathcal{K}^{0}_{m + 1}\):
-                \[\underbrace{\singular \cdots \singular}_{{\scriptscriptstyle m}} \ \poscross \ - \ \underbrace{\singular \cdots \singular}_{{\scriptscriptstyle m}} \ \negcross \ = \delta \biggl( \underbrace{\singular \cdots \singular \ \singular}_{{\scriptscriptstyle m + 1}} \biggr),\]
-                so the map is injective. It is surjective as a knot with a given chord diagram can easily be constructed by adding crossings as necessary.
-        \end{proof}
-
-        % TODO: Change all (m + 1)th to m + 1st?
-        This space \(\mathcal{K}^{0}_{n} / \delta\mathcal{K}^{0}_{n + 1} = \mathbf{A}_{m}\) is very important for describing Vassiliev invariants. With polynomials, when the \((m + 1)\)th derivative vanishes, the \(m\)th derivative should be a constant. With Vassiliev invariants, instead we get a series of constants, one for each chord diagram of order \(m\).
-
-        \begin{proposition}
-                To every Vassiliev invariant \(v\) of order \(m\), we can assign a linear functional on \(\mathcal{K}^{0}_{m}\) that vanishes on \(\delta \mathcal{K}^{0}_{m + 1}\), that is an element of \((\mathbf{A}_{m})^{\ast}\).
-        \end{proposition}
-        \begin{proof}
-                We make use of that fact that \(\mathbf{A}_{m} = \mathcal{K}^{0}_{m} / \delta\mathcal{K}^{0}_{m + 1}\). Certainly a type \(m\) invariant \(v\) defines a functional on \(\mathcal{K}^{0}_{m}\). Since by definition a type \(m\) invariant vanishes on \(\mathcal{K}^{0}_{m + 1}\), so \(v\) vanishes on \(\delta\mathcal{K}^{0}_{m + 1}\), as \(\delta\) does not affect the value of any functional (it is only required embed \(\mathcal{K}^{0}_{m + 1}\) into \(\mathcal{K}^{0}_{m}\) so that the quotient can be taken).
-        \end{proof}
-
-        In fact, the map in the proposition above is independent of the value of \(v\) on any \((m - 1)\)-singular knot, and thus, there is a well-defined map
-        \begin{align*}
-                \mathcal{V}_{m} / \mathcal{V}_{m - 1} &\longrightarrow (\mathbf{A}_{m})^{\ast} \\
-                [v]             & \longmapsto W.
-        \end{align*}
-        Just as with polynomials, when we take the \(m\)th derivative of a polynomial of degree \(m\), we recieve a (collection of) constant(s), well-defined up to the addition of any degree \(m - 1\) polynomial.
-
-        \begin{proposition}
-                Suppose that \(v\) has `\(m\)th derivative' \(W\). The collection of constants \(W \in (\mathbf{A}_{m})^{\ast}\) completely determines the value of the Vassiliev invariant \(v\) on an \(m\)-singular knot.
-        \end{proposition}
-
-        \begin{proof}
-                By lemma \ref{lem:chord_diagram_crossing_change}, (and just as in the proof of proposition \ref{prop:chord_diagrams_isom_singular_quotient_as_vs}), any two \(n\)-singular knots are related by a sequence of elements of \(n\)-singular knots, such that consecutive differences are elements of \(\delta(\mathcal{K}^{0}_{m + 1})\). But since \(v\) is of type \(m\), this is zero.
-        \end{proof}
-
-
-        \section{Weight Systems}
-
-        One might hope that any collection of constants \(W \in (\mathbf{A}_{m})^{\ast}\) is obtained as the collection of differentiation constants for some order \(m\) Vassiliev invariant \(v\). Certainly this is true for polynomials, one only needs to integrate the constant \(m\) times to find a suitable polynomial. However, this is not the case for Vassiliev invariants. It is necessary for \(W\) to satisfy some equations to be `integrated'.
-
-        \subsection{One-term relations}
-
-        Knots are
-
-        \scaffold{Which ones do integrate? Clearly not those that have isolated chords (1T). These ones can't become knot invariants, as \(v_{m}(\delta(K_{\text{1T}})) = v_{m}(K - K) = 0\). As we see in this way, elements of \(\ker \delta\) become relations that weight systems must satisfy to integrate. These relations on knots ("topological relations") pass down to relations on chord diagrams.}
-
-        \scaffold{We have not discovered the whole of \(\ker \delta\).}
-
-        \subsection{Four-term relations}
-
-        \scaffold{The following topological relation passes down to a relation on chord diagrams. (insert 4-term relation)}
-
-        \scaffold{Insert the stanford/hutchings/Bar-Natan thing about the exact sequence \(\mathcal{K}^{1}_{m} \xrightarrow{\partial} \mathcal{K}^{0}_{m} \xrightarrow{\delta} \mathcal{K}^{0}_{m + 1}\) and how this proves that the kernel is generated by (1T) and (4T).}
-
-        %\section{Filtrations}
-        %\section{Associated Graded Functor}
-        %\section{Finite Type Invariants and Chord Diagrams}
-
-        \chapter{Lie Theory and Jacobi Diagrams}
-        \label{ch:lie-theory-and-jacobi-diagrams}
-
-        \section{(Rooted) Jacobi Diagrams}
-
-        \section{Floating Jacobi Diagrams}
-
-        \scaffold{In the next section we construct the suprising isomorphism between these two spaces.}
-
-        \section{PBW Theorem}
-
-        \scaffold{The Poincare-Birkhoff-Witt theorem for Lie algebras has many forms. One of these is that [...] . A corollary of this theorem \cite{enveloping-algebras} is that there is a `canonical' (though, not natural) isomorphism \(S(\mathfrak{g}) \to \mathcal{U}(\mathfrak{g})\) given by \[\omega(x_{1} \cdots x_{n}) = \frac{1}{n!} \sum_{\sigma \in S_{n}} x_{\sigma(1)} \cdots x_{\sigma(n)}.\] Which simply exhibits that fact that \(\operatorname{gr} A \cong A\) unnaturally.}
-
-        \scaffold{Futher, \cite{enveloping-algebras}, the two spaces (though not isomorphic as algebras) are isomorphic as \(\mathfrak{g}\)-modules: \(\mathcal{U}(\mathfrak{g})^{\mathfrak{g}} \cong S(\mathfrak{g})^{\mathfrak{g}}\).}
-
-        \scaffold{The following theorem is a diagrammatic version of the above.}
-
-        \chapter{Categorical Approach to Jacobi Diagrams}
-
-        \chapter{Virtual (Welded?) Tangles and Arrow Diagrams}
-
-        \chapter{Categorical Approach to Arrow Diagrams}
-
-        \chapter{Welded Knots, Foams and the Kashiwara-Vergne Equations}
-
-        \chapter{Existing Topological Interpretations of the Kashiwara-Vergne Equations}
-
-        \section{Lie Theory}
-
-        \section{Goldman-Turaev}
-
-        \section{Welded Foams}
-
-        \chapter{Topological Approaches}
-        \scaffold{Welded foams (WKOII) vs Goldman-Turaev (AKKN) - pointing out the differences.}
-
-        \draftnote{Would be good to try writing here.}
-
-        \chapter{Emergent Tangles: Lifting Goldman-Turaev to 3 Dimensions}
-        \scaffold{Paper of Zsuzsi, Dror, Nancy, Jessica, Tamara.}
-
-        \chapter{Emergent w-foams: Lifting Goldman-Turaev to 4 Dimensions}
-        \draftnote{The content of this chapter is mathematics that still needs to be done.}
-
-        \chapter{Virtual Knot Tabulation (if present)}
+        \include{emergent_welded_associators}
 
         \appendix
         \titleformat{\chapter}[display]
