Rename title and some chapters

--- a/jacobi_diagrams_as_a_universal_enveloping_algebra.tex
+++ b/jacobi_diagrams_as_a_universal_enveloping_algebra.tex
@@ -1,5 +1,5 @@
-\chapter{Chord Diagrams as a Universal Enveloping Algebra}
-\label{ch:chord-diagrams-as-a-universal-enveloping-algebra}
+\chapter{Jacobi Diagrams as a Universal Enveloping Algebra}
+\label{ch:jacobi-diagrams-as-a-universal-enveloping-algebra}
 
 % Simply a list of topics to cover
 
