--- a/thesis.tex
+++ b/thesis.tex
@@ -227,7 +227,7 @@
 
         % Titlepage Options
         \author{Damian Lin}
-        \title{(Towards) A Unified Topological Kashiwara-Vergne Theory}
+        \title{On Vassiliev Invariants}
 
         \cleardoublepage \thispagestyle{empty}
         \null \vfil
@@ -261,11 +261,11 @@
 
         \include{lie_algebras_and_jacobi_diagrams}
 
-        \include{chord_diagrams_as_a_universal_enveloping_algebra}
+        \include{jacobi_diagrams_as_a_universal_enveloping_algebra}
 
         \include{welded_knots_and_arrow_diagrams}
 
-        \include{arrow_diagrams_as_a_universal_enveloping_algebra}
+        \include{arrowed_jacobi_diagrams_as_a_universal_enveloping_algebra}
 
         \include{expansions_and_associators}
 
