Change theorem enviroment package

--- a/jacobi_diagrams_as_a_universal_enveloping_algebra.tex
+++ b/jacobi_diagrams_as_a_universal_enveloping_algebra.tex
@@ -15,3 +15,7 @@
 
 \section{External Enveloping Algebra, Internal Enveloping Algebra (?)}
 
+% Testing italic text vs math
+
+\(a b c d \text{   \textit{a b c d abcd}}\)
+
