--- a/arrowed_jacobi_diagrams_as_a_universal_enveloping_algebra.tex
+++ b/arrowed_jacobi_diagrams_as_a_universal_enveloping_algebra.tex
@@ -1,2 +1,7 @@
-\chapter{Arrowed Jacobi Diagrams as a Universal Enveloping Algebra}
-\label{ch:arrowed-jacobi-diagrams-as-a-universal-enveloping-algebra}
+\chapter{Arrowed Jacobi diagrams as a universal enveloping algebra}
+
+\section{First subsection}
+
+\section{Second section}
+
+\section{Third subsection}
