--- a/emergent_knotting.tex
+++ b/emergent_knotting.tex
@@ -1,2 +1,7 @@
-\chapter{Emergent Knotting}
-\label{ch:emergent-knotting}
+\chapter{Emergent knotting}
+
+\section{First subsection}
+
+\section{Second section}
+
+\section{Third subsection}
