--- a/expansions_and_associators.tex
+++ b/expansions_and_associators.tex
@@ -1,8 +1,7 @@
-\chapter{Expansions and Associators}
-\label{ch:expansions-and-associators}
+\chapter{Expansions and associators}
 
-\section{Homomorphic Expansions i.e. Formality Maps}
+\section{First subsection}
 
-\section{Associators}
+\section{Second section}
 
-\subsection{Hexagon and Pentagon Equations}
+\section{Third subsection}
