--- a/introduction.tex
+++ b/introduction.tex
@@ -1,88 +1,4 @@
 \chapter*{Introduction}
-\addcontentsline{toc}{chapter}{Introduction}
+\addcontentsline{toc}{section}{\textit{Introduction}}
 
-\section*{The idea of finite type invariants}
-\draftnote{Here I want to motivate the study of finite type invariants in general, using analogies from discriminant theory.}
-
-The essence of singularity theory, developed by Arnold, Thom, Vassiliev, etc. is that various geometric or topological objects can be studied by considering not only those objects, but also their singular versions, and using this `discriminant set' to define and compute invariants. Take for example the following simple analogy, from \cite{knots-links-and-their-invariants}.
-
-In this analogy, instead of studying some topological object (say, the space of knots), we study a much simpler geometric one: the space of quadratic equations without multiple roots. For now, let us have real coefficients and real roots.
-
-\begin{example}[Quadratic equations with real roots]
-        All quadratic equations can be put in the form \(x^{2} + px + q = 0\), and then represented as a point in the \((p, q)\) coordinate plane. By completing the square, those quadratic equations with one root which we ignored live on the parabola \(P\) given by \(q = p^{2}/4\).
-
-        The number of roots of each point \((p, q)\) can then be calculated as follows. First, choose a starting point, say \((1, 0)\) which represents \(x^{2} + x = 0\), having two roots. Choose also a curve \(C\) in general position with respect to \(P\), from \((1, 0)\) to \((p, q)\). Put an orientation on the curve traced out by the parabola \(P\), such as below. Then, starting at \((1, 0)\) and traversing along the curve, note that every time the \(C\) intersects \(P\) `negatively', the number of roots decreases by two, and a `positive` intersection increases the number of roots by two.
-
-        \begin{figure}[H]
-                \centering
-                \includegraphics[width=0.4\textwidth]{graphics/parabola_example.jpg}
-        \end{figure}
-
-        The function \(R(p, q)\) that sends a quadratic equation to its number of roots is an invariant of the nice `space' of all quadratic equations with the singular locus \(P\) removed. But the moral of the story is that certain nice invariants of the `nice' space can be constructed by considering the `ugly' space that includes some `discriminant set' (in this case \(P\)), by setting the invariant, say \(f\) to take some value on \(P\), and enforcing that the value of the invariant changes by \(\pm f(P)\) on any path crossing through \(P\), depending on orientation. One could write this rule as
-
-\begin{figure}[H]
-        \centering
-        \includegraphics[width=0.3\textwidth]{graphics/simple_singularity_relation.jpg}
-\end{figure}
-\end{example}
-
-
-
-\section*{Vassiliev invariants}
-
-Let's translate this idea into knot theory, following the work of Vassiliev in \cite{cohomology-of-knot-spaces, complements-of-discriminants-of-smooth-maps-topology-and-applications}. The generic objects of study in knot theory are smooth embeddings \(S^{1} \hookrightarrow \R^{3}\). A \textit{knot} can either mean an equivalence class of such embeddings up to ambient isotopy, or a specific embedding, depending on the context.
-
-The space of knots, that is the configuration space of all smooth embeddings, lies within the space of all smooth maps \(S^{1} \to \R^{3}\) (which we denote \(K\)). And the discriminant space \(\Sigma\) is the space of all maps with singularities or self-intersections. The discriminant space is `stratified' into the components by subspaces of smooth maps with multiple self-intersections; the space with \(i\) such singularities we call \(\Sigma_{i}\).
-
-Then, each knot corresponds to a component of \(K \smallsetminus \Sigma\), and numerical invariants of knots correspond to elements of \(H^{0}(K \smallsetminus \Sigma)\).
-\draftnote{
-        My intention here is to convince the reader that finite type invariants and chord diagrams are important by fleshing out the above analogy. I want to expand the above paragraph to include:
-        \begin{itemize}
-                \item If \(H^{0}(K \smallsetminus \Sigma)\) are all knot invariants, in terms of cohomology, what are the finite type invariants?
-                \item Are the above defined in terms of invariants (functions) \(H^{0}(K \smallsetminus \Sigma_{i})\) (defined on higher levels of the stratification)?
-                \item What are the interpretations of \(H^{i}(K \smallsetminus \Sigma)\) \cite[p.149]{complements-of-discriminants-of-smooth-maps-topology-and-applications}?
-                \item According to Sossinsky in \cite[p. 49]{knots-mathematics-with-a-twist} Vassiliev's work (presumably in \cite{complements-of-discriminants-of-smooth-maps-topology-and-applications, cohomology-of-knot-spaces}) says that different paths through \(K\), amounting to different calculations of a finite type invariant, give the same result. What, precisely, is this statement in terms of homology/cohomology?
-                \item Maybe but also maybe not yet: How do chord diagrams come into this? (I think they determine how the higher levels of the stratification can take on different values under finite type invariants).
-        \end{itemize}
-
-        Something like:
-}
-
-The work of Vassiliev is to understand the space
-\(K \smallsetminus \Sigma\).
-Paths through this space correspond to isotopy on knots, so each component corresponds to a different knot. The locally constant functions on this space, that is the zeroth cohomology group,
-\({H^{0}(K \smallsetminus \Sigma, \mathcal{R})}\)
-is exactly the group of knot invariants valued in
-\(\mathcal{R}\).
-
-% TODO: Get someone who has any idea about spectral sequences to read this and see if it makes sense
-In fact, Vassiliev looks at the more general question of computing the cohomology ring
-\({H^{\ast}(K \smallsetminus \Sigma, \mathcal{R}})\).
-The Vassiliev invariants (of order \(i\)) are a certain subgroup of
-\({H^{0}(K \smallsetminus \Sigma)}\)
-that (roughly) can be written as linking numbers with cycles in the homology group of the strata at depth \(i\) of the discriminant, cycles in
-\({H_{n - 1}(\Sigma_{i}, \mathcal{R})}\).
-
-As summarised in \cite{introduction-to-vassiliev-invariants}, Vassiliev constructs and uses tools in the arsenal of singularity theory to compute terms of the cohomological spectral sequence \(E^{p, q}_{r}\), and while it is unclear whether this contains all of the cohomological information about \({K \smallsetminus \Sigma}\), its zero-dimensional cohomology classes are exactly the Vassiliev invariants.
-
-In a more down-to-earth way of putting it, Vassiliev invariants are those which differ by predictable amounts on different sides of the strata, that is obeying the relation
-\begin{figure}[H]
-        \centering
-        \includegraphics[width=0.3\textwidth]{graphics/vassiliev_relation.png}
-\end{figure}
-\noindent
-in which after some depth in the strata, the left hand side of the above is always zero, meaning that \(f\) is unchanged by that part of the strata.
-
-Invariants of Vassiliev's type are determined (up to lower order Vassiliev invariants) by \textit{weight systems} or equivalently, by their values on the the dual space of \textit{chord diagrams}. In Chapter \ref{ch:formality-and-chord-diagrams} we will approach Vassiliev invariants from this angle: by focussing instead on the algebra of chord diagrams, the associated graded space of knots. We discuss an algebraic construction of the Universal Vassiliev Invariant due to Drinfeld which makes the link to quantum algebra.
-
-In Chapter \ref{ch:lie-theory-and-jacobi-diagrams}, we find an isomorphism between the algebra of chord diagrams and the algebra of Jacobi diagrams. It becomes clear that Lie theory is the proper way to view this algebra and others like it.
-
-\scaffold{In chapter \(X\) we will talk about \(Y\).}
-
-\section*{Notation and Nomenclature}
-
-% TODO: Insert example skein relation.
-
-Note that in `skein' relations/diagrams such as above, knots are variables that only differ in the regions that are drawn, and are identical in the regions omitted. We will begin to omit the dotted lines indicating these regions.
-
-The term `knot` will be used both for specific embeddings of a knot, as well as an equivalence class under ambient isotopy: context should make it clear.
+...
