--- a/jacobi_diagrams_as_a_universal_enveloping_algebra.tex
+++ b/jacobi_diagrams_as_a_universal_enveloping_algebra.tex
@@ -1,21 +1,7 @@
-\chapter{Jacobi Diagrams as a Universal Enveloping Algebra}
-\label{ch:jacobi-diagrams-as-a-universal-enveloping-algebra}
+\chapter{Jacobi diagrams as a universal enveloping algebra}
 
-% Simply a list of topics to cover
+\section{First subsection}
 
-\section{Operands and PROPs}
+\section{Second section}
 
-\section{What kinda monoidal category are we in?}
-
-\section{Lie Algebra Objects}
-
-\section{Metrics and Casimir Lie Algebras}
-
-\section{Enveloping Algebras}
-
-\section{External Enveloping Algebra, Internal Enveloping Algebra (?)}
-
-% Testing italic text vs math
-
-\(a b c d \text{   \textit{a b c d abcd}}\)
-
+\section{Third subsection}
