--- a/lie_theory_and_jacobi_diagrams.tex
+++ b/lie_theory_and_jacobi_diagrams.tex
@@ -1,6 +1,4 @@
-\chapter{Vassiliev invariants and chord diagrams}
-
-Vassiliev invariants ...
+\chapter{Lie theory and Jacobi diagrams}
 
 \section{First subsection}
 
