--- a/emergent_welded_associators.tex
+++ b/emergent_welded_associators.tex
@@ -1,2 +1,7 @@
-\chapter{Emergent Welded Associators}
-\label{ch:emergent-welded-associators}
+\chapter{Emergent welded associators}
+
+\section{First subsection}
+
+\section{Second section}
+
+\section{Third subsection}
