--- a/welded_knots_and_arrow_diagrams.tex
+++ b/welded_knots_and_arrow_diagrams.tex
@@ -1,10 +1,7 @@
-\chapter{Welded Knots and Arrow Diagrams}
-\label{ch:welded-knots-as-arrow-diagrams}
+\chapter{Welded knots and arrow diagrams}
 
-% Simply a list of topics
+\section{First subsection}
 
-Question for myself: How does the integration theory change when welded crossings are involved?
+\section{Second section}
 
-\section{Welded knots and spinning}
-
-\section{Arrow diagrams}
+\section{Third subsection}
