Rewrite intro (space of knots), polynomial analogy

--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -1,4 +1,5 @@
 \chapter*{Acknowledgements}
 \addcontentsline{toc}{section}{\textit{Acknowledgements}}
+\markboth{\textit{Acknowledgements}}{\textit{Acknowledgements}}
 
 Thanks to ...
