--- a/arrowed_jacobi_diagrams_as_a_universal_enveloping_algebra.tex
+++ b/arrowed_jacobi_diagrams_as_a_universal_enveloping_algebra.tex
@@ -1,4 +1,5 @@
 \chapter{Arrowed Jacobi diagrams as a universal enveloping algebra}
+\label{ch:arrowed-jacobi-diagrams-as-a-universal-enveloping-algebra}
 
 \section{First subsection}
 
