--- a/main.tex
+++ b/main.tex
@@ -5,12 +5,20 @@
 
 \begin{document}
 
+\frontmatter
+
 \include{titlepage}
+
 \include{tableofcontents}
 
+\pagestyle{chapterchapter}
 \include{acknowledgements}
+
+\mainmatter
+
 \include{introduction}
 
+\pagestyle{chaptersection}
 \include{vassiliev_invariants_and_chord_diagrams}
 \include{lie_theory_and_jacobi_diagrams}
 \include{jacobi_diagrams_as_a_universal_enveloping_algebra}
@@ -19,6 +27,8 @@
 \include{expansions_and_associators}
 \include{emergent_knotting}
 \include{emergent_welded_associators}
+
+\include{references}
 
 
 \end{document}
