--- a/jacobi_diagrams_as_a_universal_enveloping_algebra.tex
+++ b/jacobi_diagrams_as_a_universal_enveloping_algebra.tex
@@ -1,4 +1,5 @@
 \chapter{Jacobi diagrams as a universal enveloping algebra}
+\label{ch:jacobi-diagrams-as-a-universal-enveloping-algebra}
 
 \section{First subsection}
 
