--- a/references.tex
+++ b/references.tex
@@ -1,5 +1,5 @@
 \chapter*{References}
-\addcontentsline{toc}{section}{\textit{Introduction}}
-\markboth{\textit{Introduction}}{\textit{Introduction}}
+\addcontentsline{toc}{section}{\textit{References}}
+\markboth{\textit{References}}{\textit{References}}
 
 \printbibliography[heading=none]
