--- a/setup.tex
+++ b/setup.tex
@@ -164,6 +164,7 @@
 \newtheorem{examples}[theorem]{Examples}
 \newtheorem{remark}[theorem]{Remark}
 \newtheorem{remarks}[theorem]{Remarks}
+\newtheorem{exercise}[theorem]{Exercise}
 \newtheorem{warning}[theorem]{Warning}
 
 % Environments for proofs
