--- a/vassiliev_invariants_and_chord_diagrams.tex
+++ b/vassiliev_invariants_and_chord_diagrams.tex
@@ -1,9 +1,7 @@
 \chapter{Vassiliev invariants and chord diagrams}
 \label{ch:vassiliev-invariants-and-chord-diagrams}
 
-\lettrine{\libertineInitialGlyph{V}}{assiliev} invariants are sophisticated to define in terms of the space of knots from the introduction, but the axiomatic definition of Birman-Lin \cite{knot-polynomials-and-vassilievs-invariants} is much simpler. The definition also illustrates an analogy first made by Bar-Natan in \cite{on-the-vassiliev-knot-invariants} in which Vassiliev invariants are ``polynomial invariants''. This is not meant in the sense that Vassiliev invariants take values in a polynomial ring (like say, the Jones polynomial), but rather that Vassiliev invariants have special properties not shared by all invariants, just as polynomial functions have special properties not shared by all functions.
-
-In the introduction below we loosely follow \cite{the-fundamental-theorem-of-vassiliev-invariants} and \cite{integration-of-singular-braid-invariants}.
+\lettrine{\libertineInitialGlyph{V}}{assiliev} invariants are sophisticated to define in terms of the space of knots from the introduction, but the axiomatic definition of Birman-Lin \cite{knot-polynomials-and-vassilievs-invariants} is much simpler. The definition also illustrates an analogy first made by Bar-Natan \cite{on-the-vassiliev-knot-invariants} in which Vassiliev invariants are ``polynomial invariants''. This is not meant in the sense that Vassiliev invariants take values in a polynomial ring (like say, the Jones polynomial), but rather that Vassiliev invariants have special properties not shared by all invariants, just as polynomial functions have special properties not shared by all functions.
 
 \section{Vassiliev Invariants}
 
@@ -12,36 +10,79 @@ In the introduction below we loosely follow \cite{the-fundamental-theorem-of-vas
 \end{definition}
 
 \begin{remark}
-	Knots with triple-points are excluded from this definition, despite also being immersions with singularities.
+	Knots with triple-points (and so on) are excluded from this definition, despite also being immersions with singularities.
 \end{remark}
 
-Any knot invariant, \(V\) can be extended to an invariant \(V^{(m)}\) of \(m\)-singular knots by the Vassiliev skein relation
-\begin{equation}
-	\label{eq:extend-to-singular-trivial}
-	V^{(0)} = V
-\end{equation}
-and
-\begin{equation}
-	\label{eq:extend-to-m-singular}
-	V^{(m + 1)}\left(\double\right) = V^{(m)}\left(\poscross\right) - V^{(m)}\left(\negcross\right).
-\end{equation}
+A singular knot with one double point is very close to two other knots, one where it's replaced by a positive crossing and one by a negative. If the conditions are right, we can extend a knot invariant to an invariant of singular knots by ``taking its derivative''.
 
+\begin{definition}
+	\label{def:derivative}
+	The \textbf{derivative} \(\delta\) of a differentiable \(m\)-singular knot invariant \(f\) is
+	\[\delta f \left( \double \right) = f \left( \poscross \right) - f\left( \negcross \right).\]
+\end{definition}
+
+What are the conditions? For this to be a well-defined operation, it mustn't matter which double point we choose.
+
+\begin{definition}
+	\label{def:differentiable-invariant}
+	An invariant \(f\) of \(m\)-singular knots is \textbf{differentiable} if
+	\begin{equation}
+		f \left( \poscross \ \double \right) - f\left( \negcross \ \double \right) = f \left( \double \ \poscross \right) - f\left( \double \ \negcross \right).
+	\end{equation}
+\end{definition}
+
+If an invariant of \(m\)-singular knots is differentiable, so is its derivative, so it can be extended to any number of double points.
+
+Rather than thinking about functions on knots satisfying certain relations, the modern version of this subject takes the philosophy of imposing relations on the objects directly.
+
+\begin{definition}
+	\label{def:differentiability-relation}
+	Define \(\mathcal{K}_{m} = \operatorname{span}(\{m\text{-singular knots}\})/\text{boundary relation}\),\\
+	where the boundary relation is
+	\[\poscross \ \double - \negcross \ \double = \double \ \poscross - \double \ \negcross.\]
+
+	From now on, we will refer to elements \(\mathcal{K}_{m}\) as \(m\)\textbf{-singular knots}, and the DIFF relation will be implicit in everything.
+\end{definition}
+
+\begin{definition}
+	\label{def:boundary}
+	The \textbf{boundary} operation is the map \(\partial : \mathcal{K}_{m} \to \mathcal{K}_{m - 1}\) defined by
+	\[ \double \longmapsto \poscross - \negcross .\]
+\end{definition}
+
+\begin{remark}
+	The definitions \ref{def:derivative} and \ref{def:differentiable-invariant} are dual to \ref{def:differentiability-relation} and \ref{def:boundary}. For example, a differentiable invariant of knots is the same as a invariant of knots in \(\mathcal{K}_{m}\).
+\end{remark}
+
+Any knot invariant, \(f\) can be extended to an invariant \(f^{(m)}\) of \(m\)-singular knots by the Vassiliev skein relation
+\[f^{(0)} = f\]
+and
+\[f^{(m + 1)}\left(\double\right) = f^{(m)}\left(\poscross\right) - f^{(m)}\left(\negcross\right).\]
+Often, we omit the superscript and write
+\[f\left(\double\right) = f\left(\poscross\right) - f\left(\negcross\right).\]
+
+The Vassiliev skein relation extends a knot via its derivative, or chooses a value on \((m + 1)\)-singular knots to agree with the difference of values on its boundary.
+
+% TODO: Could move later, even.
 \begin{definitions}
 	\begin{enumerate}[(a)]
-		\item A knot invariant is a \textbf{Vassiliev invariant} of order (or type) if there is an integer \(m\) such that
-		\[V^{(m + 1)}\biggl( \underbrace{\double \cdots \double}_{{\scriptscriptstyle m + 1}} \biggr) = 0.\]
-	\item The \textbf{order} of a Vassiliev invariant \(V\) it the highest \(m\) such that \(V\) is a Vassiliev invariant of order \(m\).
+		\item A knot invariant \(V\) is a \textbf{Vassiliev invariant} of order (or type) \(m\) if when extended to singular knots via the Vassiliev skein relation, there is an integer \(m\) such that
+		\[V\biggl( \underbrace{\double \cdots \double}_{{\scriptscriptstyle m + 1}} \biggr) = 0.\]
+	\item The \textbf{order} of a Vassiliev invariant \(V\) it the highest \(m\) such that \(V\) is a Vassiliev invariant of order \(m\). (That is, the order of a Vassiliev invariant is the highest number of double points a knot \(K\) can have without \(V(K)\) having to vanish).
 	\end{enumerate}
 \end{definitions}
-The order of a Vassiliev invariant is the highest number of double points a knot \(K\) can have without \(V(K)\) having to vanish.
-
-The Vassiliev skein relation is more often seen as
-\[V\left(\double\right) = V\left(\poscross\right) - V\left(\negcross\right),\]
-however equations (\ref{eq:extend-to-singular-trivial}) and (\ref{eq:extend-to-m-singular}) are reminiscent of the notation of the \((m + 1)\)st derivative of a function \(V\). This is reflected in the substance of (\ref{eq:extend-to-m-singular}) too: \(V\) evaluated at a double point is the difference between \(V\) evaluated at two very close points in the space of knots.
 
 \begin{remark}
 	Vassiliev invariants of order \(m\) are those that vanish after \(m + 1\) derivatives, just like degree \(m\) polynomials.
 \end{remark}
+
+There are many other similar remarks to be made about the analogy between Vassiliev invariants and polynomials. To help see the bird's eye view, and following \cite{integration-of-singular-braid-invariants}, we phrase this in terms of an integration theory.
+
+\begin{definition}
+	An \textbf{integration theory} is a sequence of abelian groups
+\end{definition}
+
+% TODO: Integration constants (chord diagrams). We then ask if there are any relations. Explain this in terms of path "integrals". Say that if we find any relationship the functionals have to satisfy, we would should impose relations on objects rather than on functions.
 
 \section{Second section}
 
