Space of knots intuition

--- a/setup.tex
+++ b/setup.tex
@@ -119,7 +119,9 @@
 
 % LIST ENVIRONMENTS
 
-\usepackage{enumerate}
+\usepackage{enumitem}
+\setlist[enumerate,1]{label={(\alph*)}}
+\setlist[enumerate,2]{label={(\roman*)}}
 
 
 % GRAPHICS AND FIGURES
